#pragma once

#include <runners/basicstreamrunner.hpp>


class StreamRunner : public BasicStreamRunner
{
public:
        virtual void printArgs();
};